<?xml version="1.0" encoding="UTF-8"?>
<!-- =======================================================================    
        Maven Project Configuration File                                        
                                                                                
        The Geotools Project                                                    
            http://www.geotools.org/                                            
                                                                                
        Version: $Id$              
     ======================================================================= -->
<project xmlns="http://maven.apache.org/POM/4.0.0" 
             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
             xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                                 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>


  <!-- =========================================================== -->
  <!--     Module Description                                      -->
  <!-- =========================================================== -->
    <groupId>it.geosolutions</groupId>
    <artifactId>gt-process-destination</artifactId>
	<version>12.2</version>
    <packaging>jar</packaging>
    <name>Destination Project Processes</name>
	
	<properties>
		<gs.version>2.6.2</gs.version>
		<gt.version>12.2</gt.version>
        <jaiext.version>1.0-M09032015</jaiext.version>
		<java.awt.headless>true</java.awt.headless>
		<jvm.opts></jvm.opts>
		<jalopy.phase>disabled</jalopy.phase>
		<jalopy.srcExcludesPattern>disabled</jalopy.srcExcludesPattern>
		<test.maxHeapSize>512M</test.maxHeapSize>
		<test.maxPermSize>128M</test.maxPermSize>
		<test.exclude.pattern>none</test.exclude.pattern>
		<remoteOwsTests>false</remoteOwsTests>
		<maven.build.timestamp.format>dd-MMM-yyyy HH:mm</maven.build.timestamp.format>
		<build.timestamp>${maven.build.timestamp}</build.timestamp>
		<build.hudsonId>-1</build.hudsonId>
		<fork.javac>true</fork.javac>
		<javac.maxHeapSize>256m</javac.maxHeapSize>
	  </properties>
    

    <description>
      Destination Project Processes.
    </description>
  
    <licenses>
        <license>
            <name>Lesser General Public License (LGPL)</name>
            <url>http://www.gnu.org/copyleft/lesser.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>


  <!-- =========================================================== -->
  <!--     Developers and Contributors                             -->
  <!-- =========================================================== -->
    <developers>        
        <developer>
            <id>mbarto</id>
            <name>Mauro Bartolomeoli</name>
            <email>mauro.bartolomeoli@geo-solutions.it</email>
            <timezone>+2</timezone>
            <roles>
                <role>Java Developer</role>
                <role>Module Maintainer</role>
            </roles>
        </developer>
    </developers>

  <!-- =========================================================== -->
  <!--     Dependency Mangement                                    -->
  <!-- =========================================================== -->
    <dependencies>
        <dependency>
            <groupId>org.jaitools</groupId>
            <artifactId>jt-utils</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>it.geosolutions.destination</groupId>
            <artifactId>destination-utils</artifactId>
            <version>1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-process</artifactId>
            <version>${project.version}</version>
        </dependency> 
		<dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-process-feature</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-geojson</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-process-raster</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geoserver</groupId>
            <artifactId>gs-main</artifactId>
            <version>${gs.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.geoserver</groupId>
            <artifactId>gs-wfs</artifactId>
            <version>${gs.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.geoserver</groupId>
            <artifactId>gs-wms</artifactId>
            <version>${gs.version}</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- JAI - ext -->
        <dependency>
          <groupId>it.geosolutions.jaiext.algebra</groupId>
          <artifactId>jt-algebra</artifactId>
          <version>${jaiext.version}</version>
        </dependency>
        
        <!-- Test dependencies -->
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-sample-data</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-property</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-epsg-hsql</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>
		<dependency>
		  <groupId>junit</groupId>
		  <artifactId>junit</artifactId>
		  <version>4.8.2</version>
		</dependency>
    </dependencies>

	<build>
  <plugins>
  
   <!-- compilation -->
   <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-compiler-plugin</artifactId>
     <version>2.3.2</version>
     <configuration>
       <source>1.6</source>
       <target>1.6</target>
       <debug>true</debug>
       <encoding>UTF-8</encoding>
       <!-- 
           On the win32 build box the compiler oom's due to the compiler accumulating
           too many classes in the permanent generation, similar to GEOT-2462  
       -->
       <fork>${fork.javac}</fork> 
       <maxmem>${javac.maxHeapSize}</maxmem>
     </configuration>
   </plugin>

   <!-- resources -->
   <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-resources-plugin</artifactId>
     <configuration>
       <encoding>UTF-8</encoding>
     </configuration>
   </plugin>

   <!-- unit testing -->
   <plugin>
    <artifactId>maven-surefire-plugin</artifactId>
    <configuration>
     <source>1.5</source>
     <target>1.5</target>
     <includes>
      <include>**/*Test.java</include>
     </includes>
     <excludes>
      <exclude>${test.exclude.pattern}</exclude>
     </excludes>
     <forkMode>once</forkMode>
     <argLine>-Xmx${test.maxHeapSize} -XX:MaxPermSize=${test.maxPermSize} -enableassertions ${jvm.opts} -Djava.awt.headless=${java.awt.headless} -DremoteOwsTests=${remoteOwsTests}</argLine>
     <printSummary>true</printSummary>
     <testFailureIgnore>${allow.test.failure.ignore}</testFailureIgnore>
    </configuration>
   </plugin>

   <!-- artifact assembly -->
   <plugin>
    <artifactId>maven-assembly-plugin</artifactId>
    <version>2.1</version>
    <configuration>
     <descriptors>
      <descriptor>release/src.xml</descriptor>
      <descriptor>release/war.xml</descriptor>
      <descriptor>release/javadoc.xml</descriptor>
      <descriptor>release/bin.xml</descriptor>
      <descriptor>release/ext-monitor.xml</descriptor>
      <descriptor>release/ext-monitor-hibernate.xml</descriptor>
      <descriptor>release/ext-control-flow.xml</descriptor>
      <descriptor>release/ext-wps.xml</descriptor>
      <descriptor>release/ext-geofence.xml</descriptor>
     </descriptors>
     <finalName>geoserver-2.6.2</finalName>
     <outputDirectory>${project.build.directory}/release</outputDirectory>
    </configuration>
   </plugin>

   <!-- code coverage -->
   <plugin>
    <groupId>org.codehaus.mojo</groupId>
    <artifactId>cobertura-maven-plugin</artifactId>
    <executions>
     <execution>
      <goals>
       <goal>clean</goal>
      </goals>
     </execution>
    </executions>
   </plugin>

   <!-- eclipse ide integration -->
   <plugin>
    <artifactId>maven-eclipse-plugin</artifactId>
    <version>2.4</version>
    <configuration>
     <!--downloadSources>true</downloadSources-->
     <additionalProjectnatures>
      <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
     </additionalProjectnatures>
    </configuration>
   </plugin>

   <plugin>
	<artifactId>maven-jar-plugin</artifactId>
	<executions>
		<execution>
			<phase>package</phase>
			<goals>
				<goal>test-jar</goal>
			</goals>
		</execution>
	</executions>
	<configuration>
		<archive>
			<manifest>
				<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
				<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
			</manifest>
			<manifestEntries>
				<GeoServerModule>core</GeoServerModule>
				<Application-Name>${project.build.finalname}</Application-Name>
				<Project-Version>${project.version}</Project-Version>
				<Iteration-Name>${iteration}</Iteration-Name>
				<Build-Timestamp>${maven.build.timestamp}</Build-Timestamp>
				<Git-Revision>${build.commit.id}</Git-Revision>
			</manifestEntries>
		</archive>
	</configuration>
   </plugin>

   <plugin>
    <inherited>true</inherited>
    <groupId>org.apache.maven.plugins</groupId>
    <artifactId>maven-source-plugin</artifactId>
    <configuration>
     <attach>true</attach>
    </configuration>
    <executions>
     <execution>
      <id>attach-sources</id>
      <goals>
       <goal>jar</goal>
       <goal>test-jar</goal>
      </goals>
     </execution>
    </executions>
   </plugin>

   <!-- initialize git revision info -->
   <plugin>
     <groupId>pl.project13.maven</groupId>
     <artifactId>git-commit-id-plugin</artifactId>
     <version>2.0.4</version>
     <executions>
       <execution>
         <goals>
           <goal>revision</goal>
         </goals>
       </execution>
     </executions>
     <configuration>
       <prefix>build</prefix>
       <failOnNoGitDirectory>false</failOnNoGitDirectory>
       <skipPoms>false</skipPoms>
       <verbose>false</verbose>
     </configuration>
   </plugin>

  </plugins>
  <extensions>
    <extension>
      <groupId>org.apache.maven.wagon</groupId>
      <artifactId>wagon-webdav</artifactId>
      <version>1.0-beta-2</version>
    </extension>
      <extension>                                  
       <groupId>org.apache.maven.wagon</groupId>   
       <artifactId>wagon-ftp</artifactId>           
       <version>1.0-beta-2</version>               
      </extension>     
  </extensions>

 </build>
	
  <!-- ================================================================== -->
  <!-- Repositories. This is where Maven looks for dependencies. The -->
  <!-- Maven repository is implicit and doesn't need to be specified. -->
  <!-- ================================================================== -->
  <repositories>
    <repository>
       <id>boundless</id>
       <name>Boundless Maven Repository</name>
       <url>http://repo.boundlessgeo.com/main</url>
       <snapshots>
         <enabled>true</enabled>
       </snapshots>
      </repository>
      
      <repository>
        <id>osgeo</id>
        <name>Open Source Geospatial Foundation Repository</name>
        <url>http://download.osgeo.org/webdav/geotools/</url>
        <snapshots>
          <enabled>true</enabled>
        </snapshots>
      </repository>

      <repository>
        <id>maven-restlet</id>
        <name>Restlet Maven Repository</name>
        <url>http://maven.restlet.org</url>
        <snapshots>
          <enabled>false</enabled>
        </snapshots>
      </repository>
    <repository>
      <id>geosolutions</id>
      <name>GeoSolutions Repository</name>
      <url>http://maven.geo-solutions.it</url>
    </repository>
    <!--repository>
      <id>osgeo</id>
      <name>OsGEO Repository</name>
      <url>http://download.osgeo.org/webdav/geotools/</url>
    </repository>
    <repository>
      <id>geotoolkit</id>
      <name>Geotk, GeoAPI and dependencies</name>
      <url>http://maven.geotoolkit.org/</url>
    </repository>
    <repository>
      <id>opengeo</id>
      <name>OpenGeo Maven Repository</name>
      <url>http://repo.boundlessgeo.com</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
    <repository>
      <id>java.net</id>
      <name>java.net Repository</name>
      <url>http://download.java.net/maven/2/</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository>
    <repository>
      <id>camel.internal.maven.repository</id>
      <name>Camel internal Maven Repo</name>
      <url>http://svn.apache.org/repos/asf/camel/m2-repo</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository>
    <repository>
      <id>Hibernate Spatial repo</id>
      <url>http://www.hibernatespatial.org/repository</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository>
    <repository>
      <id>maven-restlet</id>
      <name>Public online Restlet repository</name>
      <url>http://maven.restlet.org</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository>
    <repository>
      <id>official maven 1</id>
      <name>Public online maven repository</name>
      <url>http://repo1.maven.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository>
    <repository>
      <id>official maven 2</id>
      <name>Public online maven repository</name>
      <url>http://repo2.maven.org/maven2</url>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository-->
  </repositories>

</project>
